--- a/app/src/main/res/layout/item_quiz.xml
+++ b/app/src/main/res/layout/item_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutQuizItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -11,6 +12,7 @@
     android:layout_marginBottom="4dp">
 
     <TextView
+        android:id="@+id/textViewQuizNumber"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:text="1"
@@ -27,6 +29,7 @@
         android:layout_marginStart="12dp" />
 
     <TextView
+        android:id="@+id/textViewQuizTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
