--- a/app/src/main/res/layout/item_recent_study.xml
+++ b/app/src/main/res/layout/item_recent_study.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="12dp">
 
         <TextView
+            android:id="@+id/textViewSetTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="từ vựng tiếng anh"
@@ -32,6 +33,7 @@
             android:textColor="@color/black" />
 
         <TextView
+            android:id="@+id/textViewSetInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="12 thuật ngữ · Tác giả"
